--- a/index.html
+++ b/index.html
@@ -1,49 +1,78 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>The Song Visualizer</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url(https://fonts.googleapis.com/css?family=Poppins);
+      .button1 {
+        border: none;
+        color: rgb(14, 13, 13);
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: green wavy underline;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+      .button1 {
+        background-color:black;
+        /*leads you to the spotify authentication*/
+      }
+      /* Second Page, displays the songs */
+}
+    </style>
+  </head>
+  <body style="background-color: green">
+    <!-- Navigation Bar -->
+    <div class="container">
+      <nav>
+        <input type="checkbox" id="nav" class="hidden" />
+        <label for="nav" class="nav-btn">
+          <i></i>
+          <i></i>
+          <i></i>
+        </label>
+        <div class="logo">
+          <a href="#">Untitled Project</a>
+        </div>
+        <div class="nav-wrapper">
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="#">How it Works</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-    <head> 
-        <title>The Song Visualizer </title> 
-    </head> 
-    <body style="background-color:green;">
+    <div class="introduction">
+      <div class="catch">
+        Your favorite music, <span class="inColor">as art in color</span>.
+      </div>
+      <p>
+        Have you ever wondered what your favorite song looks like? Perhaps what
+        your favorite artist was thinking of when they wrote your go-to song?
+        With Acoustic Art, using the power of the Spotify API, as well as the DALLE
+        model, we are able to help you stand in the shoes of your artist,
+        experiencing what they once did.
+      </p>
 
-    
-
-    <p> Have you ever wondered what your favorite song looks like? Perhaps what the artists vision was when they were writing the song? With ___, using the power of the Spotify API, as well as the DALLE model, we are able to help you stand in the shoes of your artist, experiencing what they  once did.</p>
-    </body>
+      <p>
+        See the music you love to hear — welcome to your new music experience.
+      </p>
+    </div>
     <button1 onclick="Nextpage()">Lets Start!</button1>
 
     <script>
-        function Nextpage(){
-            
-        }
+      function Nextpage() {}
     </script>
- 
-
-<html>
-<head>
-<style>
-    ,
-.button1 {
-  border: none;
-  color: rgb(14, 13, 13);
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: green wavy underline;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-.button1 {
-    background-color:black}
-
-    /*leads you to the spotify authentication*/
-}
-
-
-    /* Second Page, displays the songs */
-
-
+  </body>
+</html>
 
 <!DOCTYPE html>
 <html lang="en">
